--- a/PixeonApp/mainwindow.ui
+++ b/PixeonApp/mainwindow.ui
@@ -47,6 +47,28 @@
     </item>
    </layout>
   </widget>
+  <widget class="QMenuBar" name="menuBar">
+   <property name="geometry">
+    <rect>
+     <x>0</x>
+     <y>0</y>
+     <width>800</width>
+     <height>21</height>
+    </rect>
+   </property>
+   <widget class="QMenu" name="menuOptions">
+    <property name="title">
+     <string>Options</string>
+    </property>
+    <addaction name="AddImage"/>
+   </widget>
+   <addaction name="menuOptions"/>
+  </widget>
+  <action name="AddImage">
+   <property name="text">
+    <string>New Tab</string>
+   </property>
+  </action>
  </widget>
  <resources>
   <include location="PixeonResources.qrc"/>
